# Events-Statistics-Service-

./: .env  .gitignore  AGENTS.md  Dockerfile  docker-compose.yaml  makefile  nginx.conf  requests.http  requirements.txt  review.md  start.sh
clickhouse-config/: docker-compose.yml
clickhouse-config/node1/: config.xml
clickhouse-config/node2/: config.xml
clickhouse-config/node3/: config.xml
clickhouse-config/node4/: config.xml
docs/: clickhouse-schema.md  deployment.md  event-schema.md  index.md  load-test-log-01.md  summary_load_test.md
docs/ess/: index.md
ess/: Dockerfile  __init__.py  main_consumer.py  pyproject.toml
ess/app/: __init__.py  config.py  main.py
ess/app/routers/: __init__.py  events.py
ess/app/schemas/: __init__.py  event.py
ess/app/services/: __init__.py  clickhouse.py  kafka.py  kafka_producer.py
ess/ess.egg-info/: PKG-INFO  SOURCES.txt
ess/kafka_consumer/: async_consumer.py  consumer.py  main.py
ess/scripts/: init_all.py  init_clickhouse.py
k6/: load-test.js
kafka/: consumer.py  docker-compose.yaml  producer.py
kafka-cluster/: docker-compose.yaml
tests/: requests.http
tests/routers/: test_events.py
